...
  String get loginPageDisplay3 => 'Produced by BCC Media';

  @override
  String get logOutButton => 'Log out';

  @override
  String get profileTab => 'Profile';

  @override
  String get faq => 'Frequently asked questions';

  @override
  String get bccMediaCenter =>
      'BCC Media is a media foundation in the BCC federation that produces and distributes content with positive and Christian values.';

  @override
  String get signInButton => 'Sign in';

  @override
  String get signInOrSignUp => 'Sign up / Sign in';

  @override
  String get signUpButton => 'Sign up now';
...
  String get anErrorOccurred => 'An error occurred';

  @override
  String get ok => 'OK';

  @override
  String get open => 'Open';

  @override
  String get loginFailedCheckNetwork =>
      'Login failed. Check your network connection and try again.';

  @override
...
  String get seasons => 'Seasons';

  @override
  String get episodes => 'Episodes';

  @override
  String get search => 'Search';

  @override
  String get sendFeedback => 'Send Feedback';

  @override
  String get noResults => 'No results found';
...
  String get doYouWantCast => 'Do you want to cast this video?';

  @override
  String get play => 'Play';

  @override
  String get pause => 'Pause';

  @override
  String get castQueue => 'Cast queue';

  @override
  String get options => 'Options';
...
  String get seeAll => 'See all';

  @override
  String get series => 'Series';

  @override
  String get homeTab => 'Home';

  @override
  String get sortBy => 'Sort by';

  @override
  String get videoQuality => 'Video quality';
...
  @override
  String resourceCount(int count) {
    return '$count resources';
  }

  @override
  String get continueButton => 'Continue';

  @override
  String get registerButton => 'Register';

  @override
  String get achievements => 'Achievements';
...
  String get supportBibleKids => 'Support Bible Kids';

  @override
  String get donateViaPaypal => 'Donate via PayPal';

  @override
  String get shortsTab => 'Shorts';

  @override
  String get autoGenerated => 'Auto-generated';

  @override
  String get shortsTranscriptionDisclaimer =>
...
