...
    "description": "Text displayed on onboarding screen for the Bible Kids app."
  },
  "loginPageDisplay3": "Produced by BCC Media",
  "@loginPageDisplay3": {
    "description": "Text displayed on login screen."
  },
  "liveTab": "Live",
  "@liveTab": {
    "description": "Title of live page tab"
  },
  "logOutButton": "Log out",
  "@logOutButton": {
    "description": "Text displayed on Log out button"
...
    "description": "Long title of the FAQ page."
  },
  "bccMediaCenter": "BCC Media is a media foundation in the BCC federation that produces and distributes content with positive and Christian values.",
  "@bccMediaCenter": {
    "description": "Disclaimer on login page"
  },
  "signInButton": "Sign in",
  "@signInButton": {
    "description": "Text displayed on Sign in button"
  },
  "signInOrSignUp": "Sign up / Sign in",
  "@signInOrSignUp": {
    "description": "Button to go to the onboarding page (short)"
...
    "description": "Followed by number of seasons in given series."
  },
  "episodes": "Episodes",
  "@episodes": {
    "description": "Followed by number of episodes in given series."
  },
  "search": "Search",
  "@search": {
    "description": "Button to clear cache"
  },
  "sendFeedback": "Send Feedback",
  "@sendFeedback": {
    "description": "Button to submit feedback(Survey)"
...
    "description": "Prompt displayed to the user"
  },
  "play": "Play",
  "@play": {
    "description": "Option in prompt dialog."
  },
  "pause": "Pause",
  "@pause": {
    "description": "A button to pause the video."
  },
  "castQueue": "Cast queue",
  "@castQueue": {
    "description": "Queue page title"
...
    "description": "Button to see all of some collection."
  },
  "series": "Series",
  "@series": {
    "description": "Title of the tab on info page"
  },
  "homeTab": "Home",
  "@homeTab": {
    "description": "Title of the home page"
  },
  "sortBy": "Sort by",
  "@sortBy": {
    "description": "Sorting criteria selector"
...
    "description": "Feed verse pre author text."
  },
  "broadcasts": "Broadcasts",
  "@broadcasts": {
    "description": "Title for live broadcasts."
  },
  "calendar": "Calendar",
  "@calendar": {
    "description": "Title of calendar page."
  },
  "noEvents": "No scheduled transmissions",
  "@noEvents": {
    "description": "Info in calendar page that no transmissions are scheduled for selected day."
...
    "placeholders": {
      "count": {
        "type": "int"
      }
    }
  },
  "continueButton": "Continue",
  "@continueButton": {
    "description": "Generic button text."
  },
  "registerButton": "Register",
  "@registerButton": {
    "description": "Generic button text."
...
