# flow.yaml

appId: tv.brunstad.app
---
- runScript: scripts/.env.js
- runFlow: subflows/init.yml
- runFlow: subflows/login.yml
- tapOn: Shorts.*
- assertVisible: .*Playing..*
- assertNotVisible: .*Error.*
- openLink: "https://app.bcc.media/shorts/ec5120e8-f4de-4002-9e1e-645f7e324117" # A very short short, available to usergroup "automated-test-accounts".
- assertVisible: .*Playing..*
- assertNotVisible: .*Error.*
