# flow.yaml

appId: tv.brunstad.app
---
- runScript: scripts/.env.js
- runFlow: subflows/init.yml
- launchApp: tv.brunstad.app
- runFlow:
    when:
      visible: Sign in
    file: subflows/login.yml
- openLink: "tv.brunstad.app:///episode/769"
- tapOn:
    text: Open
    optional: true
- assertVisible: .*Bible.*
- tapOn:
    point: "50%,20%"
- tapOn: Profile.*
- assertVisible: .*Bible.*
