# flow.yaml

appId: tv.brunstad.app
---
- launchApp:
    appId: com.apple.mobilesafari
    clearState: false # we cannot clear state for Safari, as that causes Maestro to reinstall the app (which doesn't work for Safari)
    clearKeychain: true
    stopApp: true
- launchApp: tv.brunstad.app
- tapOn:
    text: Allow
    optional: true
- tapOn: "Sign in"
- tapOn:
    text: Continue
    optional: true
- tapOn:
    text: Email
    optional: true
- inputText:
    text: ${output.env.LOGIN_EMAIL}
    optional: true
- pressKey: Enter
- inputText:
    text: ${output.env.LOGIN_PASSWORD}
    optional: true
- pressKey: Enter
- tapOn:
    text: Accept
    optional: true
- assertVisible: "Home"
- assertVisible: "Search"
- assertVisible: "Signed in"
