# flow.yaml

appId: tv.brunstad.app
---
- runScript: ../.env.js
- runScript: ../init.js
- runFlow: ../subflows/login.yml
- openLink: "https://app.bcc.media/episode/769"
- assertVisible: .*Bible.*
- tapOn:
    point: "50%,20%"
- tapOn: Home.*
- assertVisible: .*Bible.*
- assertVisible: Pause
